# berenike

./: .gitignore  LICENSE  README.md  checkpoint.ckpt  detections.geojson  infer.ipynb  pyproject.toml  train.py
src/berenike/: evaluation.py  loss.py  metrics.py  types.py  vis.py
src/berenike/data/: __init__.py  augmentations.py  dataset.py  tile.py
src/berenike/models/: segmenter.py
